# hs-inf

./: .gitignore  LICENSE
6 Shell und Prozesse/: CMakeLists.txt
6 Shell und Prozesse/A1/A11/: A11.c  README
6 Shell und Prozesse/A1/A12/: A12.c  README
6 Shell und Prozesse/A1/A13/: A13.c  README
6 Shell und Prozesse/A1/A14/: A14.c  README
6 Shell und Prozesse/A2/A21/: A21.c  README
6 Shell und Prozesse/A2/A22/: A22.c  README
6 Shell und Prozesse/A2/A23/: A23.c  README
6 Shell und Prozesse/A2/A24/: A24-child-c.c  A24.c  A24.child.c  README
6 Shell und Prozesse/A2/A25/: A25.c  README
6 Shell und Prozesse/A3/: helpers.c  sem_helpers.c  semaphore_helpers.c  shm_helpers.c
6 Shell und Prozesse/A3/A31/: A31.c  README
6 Shell und Prozesse/A3/A32/: A32.c  README
6 Shell und Prozesse/A3/A33/: A33.c  A33.pseudocode  README
6 Shell und Prozesse/A3/A34/: A34.c  A34.pseudocode  README
6 Shell und Prozesse/A3/A34/testfiles/: 1.txt  2.txt
